--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "",
     "url": "http://aws.amazon.com/"
   },
-  "homepage": "https://github.com/aws/aws-sdk-js",
+  "homepage": "https://github.com/guidesmiths/aws-sdk-js",
   "contributors": [
     "Loren Segal <lsegal@amazon.com>",
     "Trevor Rowe <trevrowe@amazon.com>"
@@ -77,11 +77,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/aws/aws-sdk-js"
-  },
-  "bugs": {
-    "url": "http://github.com/aws/aws-sdk-js/issues",
-    "mail": ""
+    "url": "git://github.com/guidesmiths/aws-sdk-js"
   },
   "license": "Apache-2.0",
   "keywords": [
